# cplusplus-string

./: .travis.yml  CMakeLists.txt  LICENSE  README.md  build.sh
include/tstring/: tstring.h
src/: CMakeLists.txt  main.cpp
src/tstring/: tstring.cpp
test/: CMakeLists.txt
test/tstring/: copy_swap.cpp  utlilities_string.cpp
